components/rhdh-test1/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: rhdh-test1
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: rhdh-test1 
  name: rhdh-test1
  namespace: rhdh-test1
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: rhdh-test1
