components/rhdh-test1/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: rhdh-test1
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: rhdh-test1 
  name: rhdh-test1
  namespace: rhdh-test1
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rhdh-test1
    weight: 100
